--- a/LexicalCore/LexicalCore.csproj
+++ b/LexicalCore/LexicalCore.csproj
@@ -51,5 +51,11 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ErrorCore\ErrorCore.csproj">
+      <Project>{8dd58462-39ac-4b43-9adb-b3197b63ffb7}</Project>
+      <Name>ErrorCore</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
