优化demo词法分析器，尝试递归下降，存在bug

--- a/SyntaxCore/SyntaxCore.csproj
+++ b/SyntaxCore/SyntaxCore.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -41,8 +44,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Unimplement.cs" />
+    <Compile Include="SampleSyntaxParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ErrorCore\ErrorCore.csproj">
+      <Project>{8dd58462-39ac-4b43-9adb-b3197b63ffb7}</Project>
+      <Name>ErrorCore</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\LexicalCore\LexicalCore.csproj">
+      <Project>{8f7e5bb9-8748-423c-9130-d6ef127284d3}</Project>
+      <Name>LexicalCore</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
