--- a/LexicalCore/LexicalCore.csproj
+++ b/LexicalCore/LexicalCore.csproj
@@ -48,7 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="SampleLexer.cs" />
-    <Compile Include="TakenReader.cs" />
+    <Compile Include="TokenReader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
