--- a/SyntaxCore/SyntaxCore.csproj
+++ b/SyntaxCore/SyntaxCore.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GrammerUtility.cs" />
     <Compile Include="SampleSyntaxParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
