--- a/CLKClient/CLKClient.csproj
+++ b/CLKClient/CLKClient.csproj
@@ -58,13 +58,13 @@
       <Project>{8dd58462-39ac-4b43-9adb-b3197b63ffb7}</Project>
       <Name>ErrorCore</Name>
     </ProjectReference>
-    <ProjectReference Include="..\LexicalCore\LexicalCore.csproj">
+    <ProjectReference Include="..\LexicalCore\DemoInterpreter.csproj">
       <Project>{8f7e5bb9-8748-423c-9130-d6ef127284d3}</Project>
-      <Name>LexicalCore</Name>
+      <Name>DemoInterpreter</Name>
     </ProjectReference>
-    <ProjectReference Include="..\SyntaxCore\SyntaxCore.csproj">
+    <ProjectReference Include="..\SyntaxCore\GrammarCore.csproj">
       <Project>{73b073df-883b-41fb-b30a-fdbb25094953}</Project>
-      <Name>SyntaxCore</Name>
+      <Name>GrammarCore</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
