--- a/LexicalCore/DemoInterpreter.csproj
+++ b/LexicalCore/DemoInterpreter.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{73B073DF-883B-41FB-B30A-FDBB25094953}</ProjectGuid>
+    <ProjectGuid>{8F7E5BB9-8748-423C-9130-D6EF127284D3}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SyntaxCore</RootNamespace>
-    <AssemblyName>SyntaxCore</AssemblyName>
+    <RootNamespace>LexicalCore</RootNamespace>
+    <AssemblyName>LexicalCore</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="log4net, Version=2.0.8.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
+      <HintPath>..\packages\log4net.2.0.8\lib\net45-full\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -44,11 +47,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AlgCore.cs" />
-    <Compile Include="CFG.cs" />
-    <Compile Include="GrammerUtility.cs" />
-    <Compile Include="RG.cs" />
+    <Compile Include="SampleLexer.cs" />
     <Compile Include="SampleSyntaxParser.cs" />
+    <Compile Include="TokenReader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -58,10 +59,6 @@
     <ProjectReference Include="..\ErrorCore\ErrorCore.csproj">
       <Project>{8dd58462-39ac-4b43-9adb-b3197b63ffb7}</Project>
       <Name>ErrorCore</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\LexicalCore\LexicalCore.csproj">
-      <Project>{8f7e5bb9-8748-423c-9130-d6ef127284d3}</Project>
-      <Name>LexicalCore</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
