--- a/SyntaxCore/GrammarCore.csproj
+++ b/SyntaxCore/GrammarCore.csproj
@@ -46,9 +46,9 @@
   <ItemGroup>
     <Compile Include="AnalysisDs.cs" />
     <Compile Include="CFG.cs" />
-    <Compile Include="CFGParser.cs" />
+    <Compile Include="GrammarParser.cs" />
     <Compile Include="GrammarFactory.cs" />
-    <Compile Include="GrammarUtility.cs" />
+    <Compile Include="GrammarDS.cs" />
     <Compile Include="PrintDataExtensions.cs" />
     <Compile Include="RG.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
