完成了lr分析表，分析器结构

--- a/SyntaxCore/GrammarCore.csproj
+++ b/SyntaxCore/GrammarCore.csproj
@@ -21,6 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <UseVSHostingProcess>true</UseVSHostingProcess>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -45,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AnalysisDs.cs" />
+    <Compile Include="ATL.cs" />
     <Compile Include="CFG.cs" />
     <Compile Include="GrammarParser.cs" />
     <Compile Include="GrammarFactory.cs" />
