--- a/DemoInterpreter/DemoInterpreter.csproj
+++ b/DemoInterpreter/DemoInterpreter.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{73B073DF-883B-41FB-B30A-FDBB25094953}</ProjectGuid>
+    <ProjectGuid>{F9D3C55E-9822-4907-B0C8-4563F4F2A20B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SyntaxCore</RootNamespace>
-    <AssemblyName>SyntaxCore</AssemblyName>
+    <RootNamespace>DemoInterpreter</RootNamespace>
+    <AssemblyName>DemoInterpreter</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -21,7 +21,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <UseVSHostingProcess>true</UseVSHostingProcess>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -45,15 +44,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AnalysisDs.cs" />
-    <Compile Include="ATL.cs" />
-    <Compile Include="CFG.cs" />
-    <Compile Include="GrammarParser.cs" />
-    <Compile Include="GrammarFactory.cs" />
-    <Compile Include="GrammarDS.cs" />
-    <Compile Include="PrintDataExtensions.cs" />
-    <Compile Include="RG.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SampleLexer.cs" />
+    <Compile Include="SampleSyntaxParser.cs" />
+    <Compile Include="TokenReader.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -63,13 +57,6 @@
       <Project>{8dd58462-39ac-4b43-9adb-b3197b63ffb7}</Project>
       <Name>ErrorCore</Name>
     </ProjectReference>
-    <ProjectReference Include="..\LexicalCore\DemoInterpreter.csproj">
-      <Project>{8f7e5bb9-8748-423c-9130-d6ef127284d3}</Project>
-      <Name>DemoInterpreter</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="demoGrammar.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
