--- a/GrammarCore/GrammarCore.csproj
+++ b/GrammarCore/GrammarCore.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8F7E5BB9-8748-423C-9130-D6EF127284D3}</ProjectGuid>
+    <ProjectGuid>{6E74A4E4-35A4-4589-8201-9EF2DC6BB792}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LexicalCore</RootNamespace>
-    <AssemblyName>LexicalCore</AssemblyName>
+    <RootNamespace>GrammarCore</RootNamespace>
+    <AssemblyName>GrammarCore</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -21,7 +21,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <UseVSHostingProcess>true</UseVSHostingProcess>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -32,12 +31,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="log4net, Version=2.0.8.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
-      <HintPath>..\packages\log4net.2.0.8\lib\net45-full\log4net.dll</HintPath>
-    </Reference>
-    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -48,13 +41,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SampleLexer.cs" />
-    <Compile Include="SampleSyntaxParser.cs" />
-    <Compile Include="TokenReader.cs" />
+    <Compile Include="AnalysisDs.cs" />
+    <Compile Include="ATL.cs" />
+    <Compile Include="CFG.cs" />
+    <Compile Include="GrammarDS.cs" />
+    <Compile Include="GrammarFactory.cs" />
+    <Compile Include="GrammarParser.cs" />
+    <Compile Include="PrintDataExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
+    <Compile Include="RG.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ErrorCore\ErrorCore.csproj">
