--- a/CLKClient/CLKClient.csproj
+++ b/CLKClient/CLKClient.csproj
@@ -74,5 +74,12 @@
       <Name>GrammarCore</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="demoGrammar\grammar4.3.txt" />
+    <Content Include="demoGrammar\grammar4.4.txt" />
+    <Content Include="demoGrammar\grammar4.7.txt" />
+    <Content Include="demoGrammar\grammar4.8.txt" />
+    <Content Include="demoGrammar\grammar4.9.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
